Mon Jun 12 14:22:35 PDT 2000 James Hu <jxh@entera.com>

        * server/HTTP_Response.cpp: Added content length support.
          Thanks to Greg Gallant (gcg@micrografx.com) for the fixes!

        * server/HTTP_Helpers.cpp: Fix date handling for NT.
          Thanks to Greg Gallant (gcg@micrografx.com) for the fixes!

Sun Jun  4 14:57:04 2000  Darrell Brunsch <brunsch@uci.edu>

        * clients/WebSTONE/bin/WebStone-common.pl:
        * clients/WebSTONE/bin/WebStone-manage.pl:
        * clients/WebSTONE/bin/WebStone-run.pl:
        * clients/WebSTONE/bin/WebStone-setup.pl:
        * clients/WebSTONE/bin/killbench.pl:
        * clients/WebSTONE/bin/mine-logs.pl:
        * clients/WebSTONE/bin/move-filelist.pl:
        * clients/WebSTONE/bin/move-runs.pl:
        * clients/WebSTONE/bin/runbench.pl:
        * clients/WebSTONE/bin/view-results.pl:
        * clients/WebSTONE/bin/webstone-gui.pl:
        * clients/WebSTONE/bin/write-testbed.pl:
        * clients/WebSTONE/bin/wscollect.pl:
        * clients/WebSTONE/conf/paths.pl:
        * clients/WebSTONE/doc/FAQ-webstone.html:
        * clients/WebSTONE/doc/LICENSE.html:
        * clients/WebSTONE/doc/WebStone.html:
        * clients/WebSTONE/doc/webstone2.html:
        * clients/WebSTONE/src/acconfig.h:
        * clients/WebSTONE/src/bench.c:
        * clients/WebSTONE/src/bench.h:
        * clients/WebSTONE/src/cgi-send.c:
        * clients/WebSTONE/src/config.h:
        * clients/WebSTONE/src/debug.h:
        * clients/WebSTONE/src/errexit.c:
        * clients/WebSTONE/src/genrand.c:
        * clients/WebSTONE/src/get.c:
        * clients/WebSTONE/src/get.h:
        * clients/WebSTONE/src/getopt.c:
        * clients/WebSTONE/src/gettimeofday.c:
        * clients/WebSTONE/src/nsapi-send.c:
        * clients/WebSTONE/src/parse_file_list.c:
        * clients/WebSTONE/src/parse_file_list.h:
        * clients/WebSTONE/src/rexec.c:
        * clients/WebSTONE/src/statistics.c: